enable markdown rendering of feedbacks

--- a/apps/frontend-pwa/src/globals.css
+++ b/apps/frontend-pwa/src/globals.css
@@ -3,5 +3,11 @@
 @import '@uzh-bf/design-system/dist/index.esm.css';
 
 @tailwind base;
+
 @tailwind components;
+
 @tailwind utilities;
+
+.markdown p:not(:last-child) {
+  @apply mb-2;
+}
