--- a/apps/frontend-pwa/src/globals.css
+++ b/apps/frontend-pwa/src/globals.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss/src/css/preflight.css';
 @import '@uzh-bf/design-system/dist/fonts-thesans.css';
 @import '@uzh-bf/design-system/dist/index.esm.css';
+@import 'shared-components/src/tailwind.css';
 
 @tailwind base;
 
