--- a/apps/frontend-pwa/src/globals.css
+++ b/apps/frontend-pwa/src/globals.css
@@ -1,16 +1,13 @@
 @import 'tailwindcss/src/css/preflight.css';
 @import '@uzh-bf/design-system/dist/fonts-thesans.css';
 @import '@uzh-bf/design-system/dist/index.esm.css';
+@import 'shared-components/src/tailwind.css';
 
 @tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
-
-.markdown p:not(:last-child) {
-  @apply mb-2;
-}
 
 .desert-bg {
   background-image: url('/desert.svg');
