feat: add group activities (#3027)

--- a/packages/shared-components/src/tailwind.css
+++ b/packages/shared-components/src/tailwind.css
@@ -946,6 +946,10 @@ html,
   margin-bottom: auto;
 }
 
+.-ml-1 {
+  margin-left: -0.25rem;
+}
+
 .mb-\[0\.19rem\] {
   margin-bottom: 0.19rem;
 }
@@ -966,24 +970,16 @@ html,
   margin-bottom: 0.2em;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.\!mt-1 {
-  margin-top: 0.25rem !important;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .ml-2 {
@@ -1010,12 +1006,28 @@ html,
   margin-left: 0.25rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.\!mt-1 {
+  margin-top: 0.25rem !important;
 }
 
 .block {
@@ -1038,16 +1050,16 @@ html,
   display: none;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-4 {
   height: 1rem;
 }
 
 .h-\[0\.8rem\] {
   height: 0.8rem;
-}
-
-.h-5 {
-  height: 1.25rem;
 }
 
 .h-6 {
@@ -1060,22 +1072,6 @@ html,
 
 .h-full {
   height: 100%;
-}
-
-.\!h-5 {
-  height: 1.25rem !important;
-}
-
-.\!h-4 {
-  height: 1rem !important;
-}
-
-.\!h-2 {
-  height: 0.5rem !important;
-}
-
-.h-3 {
-  height: 0.75rem;
 }
 
 .h-2 {
@@ -1094,12 +1090,12 @@ html,
   height: 1.6rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-12 {
   height: 3rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-\[1\.3rem\] {
@@ -1110,12 +1106,36 @@ html,
   height: 1.8rem;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
+.\!h-5 {
+  height: 1.25rem !important;
+}
+
+.\!h-4 {
+  height: 1rem !important;
+}
+
+.\!h-2 {
+  height: 0.5rem !important;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
 .min-h-\[18rem\] {
   min-height: 18rem;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-3 {
@@ -1126,33 +1146,12 @@ html,
   width: 1rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
 .w-6 {
   width: 1.5rem;
 }
 
 .w-7 {
   width: 1.75rem;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.\!w-5 {
-  width: 1.25rem !important;
-}
-
-.\!w-4 {
-  width: 1rem !important;
-}
-
-.\!w-2 {
-  width: 0.5rem !important;
 }
 
 .w-\[27rem\] {
@@ -1199,8 +1198,38 @@ html,
   width: 4rem;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
+.\!w-1\/2 {
+  width: 50% !important;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.\!w-5 {
+  width: 1.25rem !important;
+}
+
+.\!w-4 {
+  width: 1rem !important;
+}
+
+.\!w-2 {
+  width: 0.5rem !important;
+}
+
 .min-w-\[40px\] {
   min-width: 40px;
+}
+
+.min-w-max {
+  min-width: -moz-max-content;
+  min-width: max-content;
 }
 
 .max-w-7xl {
@@ -1241,6 +1270,16 @@ html,
 .rotate-45 {
   --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .cursor-default {
@@ -1345,12 +1384,16 @@ html,
   border-radius: 0.375rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded-none {
+  border-radius: 0px;
 }
 
 .rounded-xl {
@@ -1389,6 +1432,10 @@ html,
   border-style: solid;
 }
 
+.border-none {
+  border-style: none;
+}
+
 .border-uzh-blue-80 {
   --tw-border-opacity: 1;
   border-color: rgb(51 83 183 / var(--tw-border-opacity));
@@ -1407,11 +1454,6 @@ html,
 .border-uzh-grey-100 {
   --tw-border-opacity: 1;
   border-color: rgb(163 173 183 / var(--tw-border-opacity));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .border-uzh-grey-80 {
@@ -1444,6 +1486,16 @@ html,
   border-color: rgb(241 191 169 / var(--tw-border-opacity));
 }
 
+.border-red-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .border-b-gray-800 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(31 41 55 / var(--tw-border-opacity));
@@ -1462,11 +1514,6 @@ html,
 .bg-uzh-blue-20 {
   --tw-bg-opacity: 1;
   background-color: rgb(204 212 237 / var(--tw-bg-opacity));
-}
-
-.bg-uzh-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 96 39 / var(--tw-bg-opacity));
 }
 
 .bg-uzh-blue-100 {
@@ -1554,6 +1601,16 @@ html,
   background-color: rgb(234 244 219 / var(--tw-bg-opacity));
 }
 
+.bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-uzh-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 96 39 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1562,16 +1619,16 @@ html,
   fill: #b5bdc5;
 }
 
-.fill-uzh-blue-100 {
-  fill: #0028a5;
-}
-
 .fill-uzh-red-80 {
   fill: #e38052;
 }
 
 .fill-red-400 {
   fill: #f87171;
+}
+
+.fill-uzh-blue-100 {
+  fill: #0028a5;
 }
 
 .p-3 {
@@ -1594,6 +1651,10 @@ html,
   padding: 0.25rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .\!p-2 {
   padding: 0.5rem !important;
 }
@@ -1604,10 +1665,6 @@ html,
 
 .\!p-1 {
   padding: 0.25rem !important;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-\[0\.75em\] {
@@ -1739,6 +1796,11 @@ html,
   line-height: 1rem;
 }
 
+.\!text-sm {
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -1755,6 +1817,10 @@ html,
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .italic {
@@ -1776,11 +1842,6 @@ html,
 .text-uzh-grey-80 {
   --tw-text-opacity: 1;
   color: rgb(181 189 197 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1823,6 +1884,11 @@ html,
   color: rgb(220 96 39 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-uzh-blue-100 {
   --tw-text-opacity: 1;
   color: rgb(0 40 165 / var(--tw-text-opacity));
@@ -1838,20 +1904,39 @@ html,
   color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
 .opacity-25 {
   opacity: 0.25;
 }
 
-.opacity-0 {
-  opacity: 0;
+.opacity-75 {
+  opacity: 0.75;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .opacity-100 {
   opacity: 1;
 }
 
-.opacity-80 {
-  opacity: 0.8;
+.opacity-0 {
+  opacity: 0;
 }
 
 .shadow {
@@ -3294,6 +3379,11 @@ select {
   border-bottom-right-radius: 0.25rem;
 }
 
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -3346,6 +3436,16 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -3369,6 +3469,11 @@ select {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .text-center {
@@ -3409,6 +3514,11 @@ select {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-black {
