--- a/packages/shared-components/src/tailwind.css
+++ b/packages/shared-components/src/tailwind.css
@@ -724,6 +724,14 @@ html,
   margin-bottom: 0;
 }
 
+.visible {
+  visibility: visible;
+}
+
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -752,10 +760,6 @@ html,
   right: 0px;
 }
 
-.top-\[100\%\] {
-  top: 100%;
-}
-
 .top-1 {
   top: 0.25rem;
 }
@@ -772,10 +776,6 @@ html,
   left: 0.5rem;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -784,16 +784,8 @@ html,
   z-index: 9999;
 }
 
-.order-2 {
-  order: 2;
-}
-
-.order-1 {
-  order: 1;
-}
-
-.order-3 {
-  order: 3;
+.float-right {
+  float: right;
 }
 
 .my-auto {
@@ -823,6 +815,10 @@ html,
 
 .mb-\[0\.2em\] {
   margin-bottom: 0.2em;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mt-2 {
@@ -863,10 +859,6 @@ html,
 
 .mr-20 {
   margin-right: 5rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
 }
 
 .mt-6 {
@@ -937,6 +929,10 @@ html,
   height: 0.5rem;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -953,6 +949,14 @@ html,
   height: 3rem;
 }
 
+.h-0\.5 {
+  height: 0.125rem;
+}
+
+.h-0 {
+  height: 0px;
+}
+
 .h-24 {
   height: 6rem;
 }
@@ -961,12 +965,8 @@ html,
   height: 1.3rem;
 }
 
-.h-\[1\.8rem\] {
-  height: 1.8rem;
-}
-
-.h-9 {
-  height: 2.25rem;
+.h-\[1\.9rem\] {
+  height: 1.9rem;
 }
 
 .\!h-5 {
@@ -1017,20 +1017,25 @@ html,
   width: 27rem;
 }
 
-.w-\[80\%\] {
-  width: 80%;
+.w-\[10rem\] {
+  width: 10rem;
 }
 
-.w-\[140\%\] {
-  width: 140%;
+.w-\[16rem\] {
+  width: 16rem;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-2 {
   width: 0.5rem;
 }
 
-.w-\[16rem\] {
-  width: 16rem;
+.w-9 {
+  width: 2.25rem;
 }
 
 .w-32 {
@@ -1057,17 +1062,8 @@ html,
   width: 4rem;
 }
 
-.\!w-1\/2 {
-  width: 50% !important;
-}
-
 .w-1\/2 {
   width: 50%;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
 }
 
 .\!w-5 {
@@ -1105,10 +1101,6 @@ html,
 
 .table-auto {
   table-layout: auto;
-}
-
-.origin-\[top_center\] {
-  transform-origin: top center;
 }
 
 .translate-x-\[1\.1rem\] {
@@ -1149,12 +1141,12 @@ html,
   cursor: not-allowed;
 }
 
-.cursor-move {
-  cursor: move;
-}
-
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-move {
+  cursor: move;
 }
 
 .\!cursor-default {
@@ -1175,24 +1167,12 @@ html,
   flex-direction: column;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
 .items-end {
   align-items: flex-end;
 }
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1215,16 +1195,12 @@ html,
   gap: 1rem;
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+.gap-1\.5 {
+  gap: 0.375rem;
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .self-start {
@@ -1263,6 +1239,16 @@ html,
   border-radius: 0.75rem;
 }
 
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-r {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -1274,6 +1260,10 @@ html,
 
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-\[3px\] {
@@ -1318,6 +1308,11 @@ html,
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-uzh-grey-80 {
+  --tw-border-opacity: 1;
+  border-color: rgb(181 189 197 / var(--tw-border-opacity));
+}
+
 .border-uzh-grey-60 {
   --tw-border-opacity: 1;
   border-color: rgb(200 206 212 / var(--tw-border-opacity));
@@ -1326,11 +1321,6 @@ html,
 .border-uzh-grey-100 {
   --tw-border-opacity: 1;
   border-color: rgb(163 173 183 / var(--tw-border-opacity));
-}
-
-.border-uzh-grey-80 {
-  --tw-border-opacity: 1;
-  border-color: rgb(181 189 197 / var(--tw-border-opacity));
 }
 
 .border-red-300 {
@@ -1418,9 +1408,29 @@ html,
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-red-200 {
@@ -1461,11 +1471,6 @@ html,
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-uzh-lightgreen-20 {
@@ -1609,6 +1614,10 @@ html,
   padding-bottom: 1rem;
 }
 
+.pb-0 {
+  padding-bottom: 0px;
+}
+
 .pt-1 {
   padding-top: 0.25rem;
 }
@@ -1653,6 +1662,11 @@ html,
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1666,11 +1680,6 @@ html,
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-xs {
@@ -1726,6 +1735,26 @@ html,
   color: rgb(181 189 197 / var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1734,6 +1763,16 @@ html,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-red-800 {
@@ -1766,11 +1805,6 @@ html,
   color: rgb(220 96 39 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-uzh-blue-100 {
   --tw-text-opacity: 1;
   color: rgb(0 40 165 / var(--tw-text-opacity));
@@ -1791,11 +1825,6 @@ html,
   color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
@@ -1807,6 +1836,10 @@ html,
 
 .opacity-75 {
   opacity: 0.75;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .opacity-80 {
@@ -1839,16 +1872,10 @@ html,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition-\[width_transform\] {
-  transition-property: width transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-\[width_height\] {
-  transition-property: width height;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .transition-transform {
@@ -1857,16 +1884,12 @@ html,
   transition-duration: 150ms;
 }
 
-.duration-\[250ms\] {
-  transition-duration: 250ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.ease-\[ease\] {
-  transition-timing-function: ease;
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .w-rdx-navigation-menu-viewport {
@@ -1933,9 +1956,9 @@ html,
   background-color: rgb(248 223 212 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-uzh-red-40:hover {
+.hover\:bg-uzh-red-60:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(241 191 169 / var(--tw-bg-opacity));
+  background-color: rgb(234 160 125 / var(--tw-bg-opacity));
 }
 
 .hover\:fill-uzh-red-100:hover {
@@ -1945,6 +1968,11 @@ html,
 .hover\:\!text-white:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:text-uzh-red-100:hover {
@@ -1960,11 +1988,6 @@ html,
 
 .focus\:z-10:focus {
   z-index: 10;
-}
-
-.focus\:bg-gray-100:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1987,8 +2010,22 @@ html,
   --tw-ring-opacity: 0.75;
 }
 
+.rdx-disabled\:cursor-not-allowed[data-disabled] {
+  cursor: not-allowed;
+}
+
 .rdx-disabled\:opacity-50[data-disabled] {
   opacity: 0.5;
+}
+
+.rdx-disabled\:hover\:bg-white:hover[data-disabled] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.rdx-disabled\:hover\:text-gray-700:hover[data-disabled] {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .rdx-state-active\:border-b-slate-600[data-state="active"] {
@@ -2000,133 +2037,9 @@ html,
   border-bottom-color: transparent;
 }
 
-@keyframes scale-out-content {
-  0% {
-    transform: rotateX(0deg) scale(1);
-    opacity: 1;
-  }
-
-  100% {
-    transform: rotateX(-10deg) scale(0.95);
-    opacity: 0;
-  }
-}
-
-.rdx-state-closed\:animate-scale-out-content[data-state="closed"] {
-  animation: scale-out-content 0.2s ease;
-}
-
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-.rdx-state-hidden\:animate-fade-out[data-state="hidden"] {
-  animation: fade-out 0.2s ease;
-}
-
 .rdx-state-inactive\:bg-gray-50[data-state="inactive"] {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-@keyframes scale-in-content {
-  0% {
-    transform: rotateX(-30deg) scale(0.9);
-    opacity: 0;
-  }
-
-  100% {
-    transform: rotateX(0deg) scale(1);
-    opacity: 1;
-  }
-}
-
-.rdx-state-open\:animate-scale-in-content[data-state="open"] {
-  animation: scale-in-content 0.2s ease;
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-.rdx-state-visible\:animate-fade-in[data-state="visible"] {
-  animation: fade-in 0.2s ease;
-}
-
-@keyframes enter-from-right {
-  0% {
-    transform: translateX(200px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-.rdx-motion-from-end\:animate-enter-from-right[data-motion="from-end"] {
-  animation: enter-from-right 0.25s ease;
-}
-
-@keyframes enter-from-left {
-  0% {
-    transform: translateX(-200px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-.rdx-motion-from-start\:animate-enter-from-left[data-motion="from-start"] {
-  animation: enter-from-left 0.25s ease;
-}
-
-@keyframes exit-to-right {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateX(200px);
-    opacity: 0;
-  }
-}
-
-.rdx-motion-to-end\:animate-exit-to-right[data-motion="to-end"] {
-  animation: exit-to-right 0.25s ease;
-}
-
-@keyframes exit-to-left {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateX(-200px);
-    opacity: 0;
-  }
-}
-
-.rdx-motion-to-start\:animate-exit-to-left[data-motion="to-start"] {
-  animation: exit-to-left 0.25s ease;
 }
 
 .prose-headings\:font-sans :is(:where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"] *))) {
@@ -2162,36 +2075,17 @@ html,
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.dark .dark\:hover\:bg-gray-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:focus\:bg-gray-900:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+.dark .rdx-disabled\:dark\:hover\:text-gray-300:hover[data-disabled] {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
   .md\:h-\[28rem\] {
     height: 28rem;
   }
