--- a/packages/shared-components/src/tailwind.css
+++ b/packages/shared-components/src/tailwind.css
@@ -1458,6 +1458,11 @@ html,
   background-color: rgb(218 222 226 / var(--tw-bg-opacity));
 }
 
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
 .bg-uzh-red-20 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 223 212 / var(--tw-bg-opacity));
@@ -1466,6 +1471,11 @@ html,
 .bg-uzh-red-60 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 160 125 / var(--tw-bg-opacity));
+}
+
+.bg-uzh-red-80 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 128 82 / var(--tw-bg-opacity));
 }
 
 .bg-red-400 {
@@ -1805,6 +1815,11 @@ html,
   color: rgb(163 173 183 / var(--tw-text-opacity));
 }
 
+.text-slate-700 {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+
 .text-uzh-red-100 {
   --tw-text-opacity: 1;
   color: rgb(220 96 39 / var(--tw-text-opacity));
@@ -1956,6 +1971,11 @@ html,
 .hover\:bg-uzh-red-60:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(234 160 125 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-uzh-red-80:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 128 82 / var(--tw-bg-opacity));
 }
 
 .hover\:fill-uzh-red-100:hover {
