--- a/packages/shared-components/src/tailwind.css
+++ b/packages/shared-components/src/tailwind.css
@@ -1348,6 +1348,11 @@ html,
   border-color: rgb(241 191 169 / var(--tw-border-opacity));
 }
 
+.border-uzh-red-80 {
+  --tw-border-opacity: 1;
+  border-color: rgb(227 128 82 / var(--tw-border-opacity));
+}
+
 .border-red-400 {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
@@ -1958,6 +1963,11 @@ html,
   border-color: rgb(241 191 169 / var(--tw-border-opacity));
 }
 
+.hover\:border-uzh-red-80:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(227 128 82 / var(--tw-border-opacity));
+}
+
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2005,6 +2015,16 @@ html,
 
 .focus\:z-10:focus {
   z-index: 10;
+}
+
+.focus\:border-uzh-red-40:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(241 191 169 / var(--tw-border-opacity));
+}
+
+.focus\:border-uzh-red-80:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(227 128 82 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -3266,11 +3286,6 @@ select {
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
-.border-uzh-blue-80 {
-  --tw-border-opacity: 1;
-  border-color: rgb(51 83 183 / var(--tw-border-opacity));
-}
-
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
@@ -3309,11 +3324,6 @@ select {
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-uzh-blue-80 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 83 183 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -3411,11 +3421,6 @@ select {
 
 .focus\:border-solid:focus {
   border-style: solid;
-}
-
-.focus\:border-uzh-blue-80:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(51 83 183 / var(--tw-border-opacity));
 }
 
 .disabled\:opacity-50:disabled {
