--- a/packages/shared-components/src/tailwind.css
+++ b/packages/shared-components/src/tailwind.css
@@ -1867,6 +1867,10 @@ html,
   opacity: 0.7;
 }
 
+.opacity-50 {
+  opacity: 0.5;
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -2002,6 +2006,11 @@ html,
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .hover\:text-uzh-red-100:hover {
   --tw-text-opacity: 1;
   color: rgb(220 96 39 / var(--tw-text-opacity));
@@ -2011,6 +2020,11 @@ html,
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:outline-none:hover {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .focus\:z-10:focus {
@@ -2045,24 +2059,6 @@ html,
 
 .focus-visible\:ring-opacity-75:focus-visible {
   --tw-ring-opacity: 0.75;
-}
-
-.rdx-disabled\:cursor-not-allowed[data-disabled] {
-  cursor: not-allowed;
-}
-
-.rdx-disabled\:opacity-50[data-disabled] {
-  opacity: 0.5;
-}
-
-.rdx-disabled\:hover\:bg-white:hover[data-disabled] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.rdx-disabled\:hover\:text-gray-700:hover[data-disabled] {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .rdx-state-active\:border-b-slate-600[data-state="active"] {
@@ -2117,7 +2113,7 @@ html,
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.dark .rdx-disabled\:dark\:hover\:text-gray-300:hover[data-disabled] {
+.dark .dark\:hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
