--- a/apps/office-addin/src/content/output.css
+++ b/apps/office-addin/src/content/output.css
@@ -1180,6 +1180,14 @@ html,
   left: 0.5rem;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1188,8 +1196,16 @@ html,
   z-index: 9999;
 }
 
+.z-\[1000\] {
+  z-index: 1000;
+}
+
 .float-right {
   float: right;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .my-auto {
@@ -1265,12 +1281,12 @@ html,
   margin-right: 5rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mb-1 {
@@ -1299,6 +1315,10 @@ html,
 
 .table {
   display: table;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -1485,12 +1505,20 @@ html,
   min-width: 40px;
 }
 
+.min-w-\[20rem\] {
+  min-width: 20rem;
+}
+
 .min-w-max {
   min-width: max-content;
 }
 
 .max-w-7xl {
   max-width: 80rem;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .flex-1 {
@@ -1560,6 +1588,10 @@ html,
       user-select: none;
 }
 
+.list-none {
+  list-style-type: none;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1602,6 +1634,10 @@ html,
 
 .gap-1 {
   gap: 0.25rem;
+}
+
+.gap-x-4 {
+  column-gap: 1rem;
 }
 
 .self-start {
@@ -1752,6 +1788,21 @@ html,
 .border-uzh-red-80 {
   --tw-border-opacity: 1;
   border-color: rgb(227 128 82 / var(--tw-border-opacity));
+}
+
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
+.border-orange-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(249 115 22 / var(--tw-border-opacity));
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .border-red-400 {
@@ -2231,6 +2282,16 @@ html,
   color: rgb(220 96 39 / var(--tw-text-opacity));
 }
 
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 .text-uzh-blue-100 {
   --tw-text-opacity: 1;
   color: rgb(0 40 165 / var(--tw-text-opacity));
@@ -2244,11 +2305,6 @@ html,
 .text-slate-800 {
   --tw-text-opacity: 1;
   color: rgb(30 41 59 / var(--tw-text-opacity));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
 .text-red-600 {
@@ -2266,6 +2322,10 @@ html,
 
 .opacity-70 {
   opacity: 0.7;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .opacity-0 {
@@ -2294,6 +2354,11 @@ html,
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .transition-transform {
@@ -2403,15 +2468,30 @@ html,
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .hover\:text-uzh-red-100:hover {
   --tw-text-opacity: 1;
   color: rgb(220 96 39 / var(--tw-text-opacity));
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-none:hover {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:outline-none:hover {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .focus\:z-10:focus {
@@ -2446,24 +2526,6 @@ html,
 
 .focus-visible\:ring-opacity-75:focus-visible {
   --tw-ring-opacity: 0.75;
-}
-
-.rdx-disabled\:cursor-not-allowed[data-disabled] {
-  cursor: not-allowed;
-}
-
-.rdx-disabled\:opacity-50[data-disabled] {
-  opacity: 0.5;
-}
-
-.rdx-disabled\:hover\:bg-white:hover[data-disabled] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.rdx-disabled\:hover\:text-gray-700:hover[data-disabled] {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .rdx-state-active\:border-b-slate-600[data-state="active"] {
@@ -2518,7 +2580,7 @@ html,
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.dark .rdx-disabled\:dark\:hover\:text-gray-300:hover[data-disabled] {
+.dark .dark\:hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
