--- a/apps/office-addin/src/content/content.css
+++ b/apps/office-addin/src/content/content.css
@@ -1,5 +1,5 @@
-@import '@uzh-bf/design-system/dist/preflight.css';
-@import '@uzh-bf/design-system/dist/index.esm.css';
+@import "@uzh-bf/design-system/dist/preflight.css";
+@import "@uzh-bf/design-system/dist/index.esm.css";
 
 @tailwind base;
 @tailwind components;
