--- a/packages/shared-components/src/tailwind.css
+++ b/packages/shared-components/src/tailwind.css
@@ -3248,10 +3248,6 @@ select {
   border-width: 0px;
 }
 
-.border-solid {
-  border-style: solid;
-}
-
 .border-red-400 {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
@@ -3265,6 +3261,11 @@ select {
 .border-slate-200 {
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
+.border-slate-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
 .border-slate-400 {
@@ -3324,6 +3325,14 @@ select {
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-3 {
@@ -3425,6 +3434,14 @@ select {
 
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
+}
+
+.prose-p\:m-0 :is(:where(p):not(:where([class~="not-prose"] *))) {
+  margin: 0px;
+}
+
+.prose-img\:m-0 :is(:where(img):not(:where([class~="not-prose"] *))) {
+  margin: 0px;
 }
 
 @media (min-width: 640px) {
