markdown css import and cssnano for deduplication and minification

--- a/apps/frontend-control/src/globals.css
+++ b/apps/frontend-control/src/globals.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss/src/css/preflight.css';
 @import '@uzh-bf/design-system/dist/index.esm.css';
+@import '@klicker-uzh/markdown/dist/tailwind.css';
 @import 'shared-components/src/tailwind.css';
 
 @tailwind base;
