wip: more upgrades but error with next intl

--- a/packages/markdown/src/public/utilities.css
+++ b/packages/markdown/src/public/utilities.css
@@ -23,6 +23,27 @@
   margin-bottom: 0.25rem
 }
 
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2
+}
+
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3
+}
+
 .flex {
   display: flex
 }
